tools/k8s-deployment-standard/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: zefirnikolov/privatization:aksserver1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: my-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server

  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
