tools/k8s-deployment-standard/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: zefirnikolov/privatization:aksweb1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: my-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web

  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
